# rust-opus

./: README.md
opus-sys/: Cargo.toml  build.rs
opus-sys/src/: lib.rs
opus-sys/x86_64/: opus2015.lib
opusfile-sys/: Cargo.toml  build.rs
