[package]
name = "opusfile-sys"
version = "0.1.0"
authors = ["Tero Hänninen <lgvz@users.noreply.github.com>"]
description = "Bindings to libopusfile"
license = "MIT"
keywords = ["bindings", "opusfile"]
links = "opusfile"
build = "build.rs"

[dependencies]
libc = "0.1"
ogg-sys = "*"
opus-sys = "*"

[build-dependencies]
pkg-config = "*"
